--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 3,
 	"name": "FACE-M",
-	"description": "Displays win percentage (%) on FACEIT. Created by x3picF4ilx (Bytenote) & MrMaxim.",
-	"version": "1.1.2",
+	"description": "See opponents win percentage (%) on FACEIT. Created by x3picF4ilx (Bytenote) & MrMaxim.",
+	"version": "1.1.3",
 	"icons": {
 		"16": "icon-16.png",
 		"48": "icon-48.png",
