--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "face-m",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "Chrome extension that displays the win percentage of your opponents in FACEIT lobbies",
 	"scripts": {
 		"build": "node webpack/build.js",
@@ -32,6 +32,7 @@
 	},
 	"dependencies": {
 		"dotenv": "^16.0.3",
+		"mem": "^9.0.2",
 		"p-memoize": "^7.1.1",
 		"p-retry": "^5.1.2"
 	}
