--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "face-m",
-	"version": "1.1.3",
-	"description": "Chrome extension that displays the win percentage of your opponents in FACEIT lobbies",
+	"version": "1.2.0",
+	"description": "Chrome extension that displays the win percentage of your opponents & your own team in FACEIT lobbies",
 	"scripts": {
 		"build": "node webpack/build.js",
 		"start": "node webpack/index.js"
