--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 3,
-	"name": "VisusGG (formerly FACE-M)",
+	"name": "VisusGG",
 	"description": "VisusGG, a browser extension by x3picF4ilx (Bytenote) & MrMaxim, aims to improve the user experience on FACEIT's platform.",
-	"version": "2.0.3",
+	"version": "2.0.4",
 	"icons": {
 		"16": "icon-16.png",
 		"48": "icon-48.png",
