--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "visusgg",
-	"version": "2.2.3",
+	"version": "2.2.4",
 	"description": "Browser extension aiming to improve the user experience by providing additional stats around the FACEIT platform.",
 	"scripts": {
 		"build": "cross-env NODE_ENV=production node webpack/build.js",
-		"build-firefox": "cross-env BROWSER=firefox NODE_ENV=production node webpack/build.js",
+		"build:firefox": "cross-env BROWSER=firefox NODE_ENV=production node webpack/build.js",
 		"start": "node webpack/index.js",
-		"start-firefox": "cross-env BROWSER=firefox node webpack/index.js"
+		"start:firefox": "cross-env BROWSER=firefox node webpack/index.js"
 	},
 	"repository": {
 		"type": "git",
