--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,13 +2,15 @@
     "manifest_version": 3,
     "name": "VisusGG",
     "description": "VisusGG, a browser extension by x3picF4ilx (Bytenote) & MrMaxim, aims to improve the user experience on FACEIT's platform.",
-    "version": "2.3.0",
+    "version": "2.3.1",
     "icons": {
         "16": "icon-16.png",
         "48": "icon-48.png",
         "128": "icon-128.png"
     },
-    "background": { "service_worker": "background.js" },
+    "background": {
+        "service_worker": "background.js"
+    },
     "content_scripts": [
         {
             "run_at": "document_end",
